Update Blinter project description in index.html and README.md to provide a more comprehensive overview of its features, including static analysis for syntax errors, security vulnerabilities, performance issues, and style problems.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <span class="tag bg-gray-700">Linting</span>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">Blinter</h3>
-                        <p class="mb-4 text-gray-300">A lightweight and easy-to-use linter for Windows batch files (.bat). Helps identify syntax errors and enforce best practices.</p>
+                        <p class="mb-4 text-gray-300">Blinter is a linter for Windows batch files. It provides comprehensive static analysis to identify syntax errors, security vulnerabilities, performance issues and style problems.</p>
                     </div>
                     <a href="https://github.com/tboy1337/Blinter" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
